[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=4]
[ext_resource path="res://Source/Gameplay/HUD/HostGameMenu.gd" type="Script" id=5]
[ext_resource path="res://Source/Gameplay/Map/Map.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Background/Background.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=7]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 7 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = SubResource( 7 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 6 )
LineEdit/styles/normal = SubResource( 6 )
LineEdit/styles/read_only = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="HostGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 7 )]

[node name="ColorRect" parent="Background" index="0"]
color = Color( 0.137255, 0.670588, 0.878431, 1 )

[node name="Map" parent="." instance=ExtResource( 6 )]

[node name="Host" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -239.0
margin_right = 240.0
margin_bottom = 239.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="Host"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 260, 0 )

[node name="MarginTop" type="ColorRect" parent="Host/Info"]
margin_right = 480.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Host/Info"]
margin_top = 9.0
margin_right = 480.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Create a Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid1" type="ColorRect" parent="Host/Info"]
margin_top = 62.0
margin_right = 480.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Name" type="Label" parent="Host/Info"]
margin_top = 71.0
margin_right = 480.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Lobby Name *"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid2" type="ColorRect" parent="Host/Info"]
margin_top = 112.0
margin_right = 480.0
margin_bottom = 117.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="LobbyName" type="LineEdit" parent="Host/Info"]
margin_top = 121.0
margin_right = 480.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color_selected = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_uneditable = Color( 0.588235, 0.588235, 0.588235, 1 )
align = 1
placeholder_alpha = 1.0

[node name="MarginMid3" type="ColorRect" parent="Host/Info"]
margin_top = 175.0
margin_right = 480.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Info" type="Label" parent="Host/Info"]
margin_top = 184.0
margin_right = 480.0
margin_bottom = 221.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Number of players? *"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid4" type="ColorRect" parent="Host/Info"]
margin_top = 225.0
margin_right = 480.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="PlayersRange" type="SpinBox" parent="Host/Info"]
margin_top = 234.0
margin_right = 480.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 49 )
min_value = 2.0
max_value = 6.0
value = 2.0
align = 1

[node name="MarginMid5" type="ColorRect" parent="Host/Info"]
margin_top = 287.0
margin_right = 480.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Password" type="Label" parent="Host/Info"]
margin_top = 296.0
margin_right = 480.0
margin_bottom = 333.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Lobby Password"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid6" type="ColorRect" parent="Host/Info"]
margin_top = 337.0
margin_right = 480.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="LobbyPassword" type="LineEdit" parent="Host/Info"]
margin_top = 346.0
margin_right = 480.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color_selected = Color( 0.588235, 0.588235, 0.588235, 1 )
custom_colors/font_color_uneditable = Color( 0.588235, 0.588235, 0.588235, 1 )
align = 1
placeholder_alpha = 1.0

[node name="MarginMid7" type="ColorRect" parent="Host/Info"]
margin_top = 400.0
margin_right = 480.0
margin_bottom = 405.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu" parent="Host/Info" instance=ExtResource( 3 )]
margin_top = 409.0
margin_right = 480.0
margin_bottom = 469.0
size_flags_vertical = 3

[node name="MarginLeft" type="Label" parent="Host/Info/HMenu"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Cancel" parent="Host/Info/HMenu" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 220.0
custom_fonts/font = SubResource( 8 )
text = "Cancel"
flat = true

[node name="MarginMid" type="Label" parent="Host/Info/HMenu"]
margin_left = 240.0
margin_top = 11.0
margin_right = 240.0
margin_bottom = 48.0

[node name="Host" parent="Host/Info/HMenu" instance=ExtResource( 2 )]
margin_left = 260.0
margin_right = 460.0
custom_fonts/font = SubResource( 8 )
text = "Create"
flat = true

[node name="MarginRight" type="Label" parent="Host/Info/HMenu"]
margin_left = 480.0
margin_top = 11.0
margin_right = 480.0
margin_bottom = 48.0

[node name="MarginBottom" type="ColorRect" parent="Host/Info"]
margin_top = 473.0
margin_right = 480.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Host/Info/HMenu/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Host/Info/HMenu/Host" to="." method="_on_Host_pressed"]

[editable path="Background"]
[editable path="Map"]
[editable path="Host/Info/HMenu/Cancel"]
